--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,11 @@ exclude = [
   "tests/fixture/state",
   "tests/fixture/success",
   "dev",
-  "rustlings"
+  "rustlings",
+  "learning-cxx",
+  "exams",
+  "TinyInfiniTensor",
+  "learning-lm-rs"
 ]
 
 [workspace.package]
